Fix for comment spill over
modified:   assets/scripts/comments/ui.js
modified:   assets/scripts/templates/blog-listing.handlebars
modified:   assets/styles/index.scss
modified:   index.html

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -69,6 +69,8 @@ section {
   border-radius: 5px;
   margin-bottom: 30px;
   margin-top: 30px;
+  max-width: 1000px;
+  min-height: 290px;
 }
 
 .comments-text {
@@ -115,7 +117,6 @@ section {
 }
 
 .tiny {
-  overflow: hidden;
   width: 80vw;
 }
 
